appId: com.hanjang.fo
---
- runFlow: ../_setup.yaml
- runFlow: ../_signin.yaml
- repeat:
    times: 3
    commands:
      - runFlow:
          when:
            notVisible: "로그아웃"
          commands:
            - tapOn: "마이"
            - extendedWaitUntil:
                visible: "로그아웃"
                timeout: 5000
                optional: true
- assertVisible: "로그아웃"
- tapOn: "로그아웃"
- extendedWaitUntil:
    visible: "카카오로 시작"
    timeout: 10000
- takeScreenshot: 07-logout